Testing commits on gitpod.

--- a/index.html
+++ b/index.html
@@ -18,10 +18,11 @@
 				<h1>Test</h1>
 				<p>This is my test page, lets see how it works</p>
 			</div>
-            <div class="col-6 height blue">
-
+            <div class="col-6 height blue text-center">
+                Centred text
             </div>
-            <div class="col-6 height red">
+            <div class="col-6 height red text-right">
+                Text to the right
             </div>
 		</div>
 	</div>
